<?xml version="1.0"?>
<package format="3">
  <name>arena_camera</name>
  <version>0.0.1</version>
  <description>
    ROS2 Wrapper for LucidVision cameras using their Arena SDK.
  </description>

  <author email="amarburg@uw.edu">Aaron Marburg</author>
  <maintainer email="amarburg@uw.edu">Aaron Marburg</maintainer>

  <license>BSD 3-Clause</license>

  <url type="website">http://wiki.ros.org/arena_camera</url>

  <buildtool_depend>colcon</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>imaging_msgs</depend>
  <depend>camera_control_msgs</depend>

  <!-- <build_depend>actionlib</build_depend>
  <build_depend>camera_control_msgs</build_depend>
  <build_depend>camera_info_manager</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>arena_sdk</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>imaging_msgs</build_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>camera_control_msgs</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>arena_sdk</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>roslint</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>imaging_msgs</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>


  <!-- The export tag contains other, unspecified, tags -->
  <!-- <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export> -->
</package>
