<?xml version="1.0"?>
<package format="3">
  <name>arena_camera</name>
  <version>0.0.1</version>
  <description>
    ROS2 Wrapper for LucidVision cameras using their Arena SDK.
  </description>

  <author email="amarburg@uw.edu">Aaron Marburg</author>
  <maintainer email="amarburg@uw.edu">Aaron Marburg</maintainer>

  <license>BSD 3-Clause</license>

  <url type="repository">https://github.com/apl-ocean-engineering/arena_camera_ros2/</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>camera_control_msgs</depend>
  <depend>camera_info_manager</depend>
  <depend>generate_parameter_library</depend>
  <depend>image_transport</depend>
  <depend>imaging_msgs</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
