<?xml version="1.0"?>
<package format="3">
  <name>camera_control_msgs</name>

  <version>0.2.1</version>

  <description>
      Message package from the arena_camera package.
      Contains action and service definitions of the arena_camera interface.
  </description>

  <author>Marcel Debout</author>
  <author>Markus Grimm</author>
  <author>Nikolas Engelhard</author>
  <maintainer email="grimm@magazino.eu">Markus Grimm</maintainer>
  <maintainer email="engelhard@magazino.eu">Nikolas Engelhard</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/apl-ocean-engineering/arena_camera_ros2/</url>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>sensor_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
